--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Michael Blank's Homepage
 
 # User settings
 username: Michael Blank
-user_description: Designing and coding software is what I do and I'm really passionate about it.
+user_description: Designing and coding software is what I do and what my passion is.
 user_title: Passionate software developer and architect.
 email: mboook@gmail.com
 twitter_username: mboook
