--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ github_username:  mbok
 gplus_username:  mboook
 
 # Google-analytics
-google-analytics:
-  id: ""
+# google-analytics:
+  # id: ""
 
 exclude: ['package.json', 'src' , 'node_modules']
